--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,13 @@
 * {
-  margin: 0.3em;
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-size: 1em;
+}
+
+body {
+  display: flex;
+  flex-direction: row;
 }
 
 .container-icons,
@@ -14,8 +19,23 @@
 }
 
 .container-icons {
+  padding: 1em;
   display: flex;
   width: 100vw;
   height: 50vh;
-  border: 1px solid red;
+}
+
+.main-container {
+  display: flex;
+}
+
+.display-left {
+  padding: 1em;
+  width: 25vw;
+  border-right: 1px solid green;
+  height: 100vh;
+}
+
+.subtitle {
+  color: grey;
 }
