--- a/src/style.css
+++ b/src/style.css
@@ -27,12 +27,7 @@ body {
 
 .main-container {
   display: flex;
-}
-
-.display-left {
-  width: 35vw;
-  border-right: 1px solid rgb(186, 187, 186);
-  height: 100vh;
+  padding: 1em;
 }
 
 .subtitle {
@@ -42,7 +37,6 @@ body {
 .title {
   display: flex;
   align-items: center;
-  padding-left: 1em;
   border-bottom: orange 1px solid;
   width: 100%;
   height: 9vh;
@@ -51,9 +45,14 @@ body {
   margin-bottom: 1em;
 }
 
+.display-left {
+  width: 35vw;
+  border-right: 1px solid rgb(186, 187, 186);
+  height: 100vh;
+}
 .display-left-text {
-  padding: 0 1em;
   margin-bottom: 1em;
+  padding-right: 1em;
   font-size: 0.8em;
   color: grey;
   font-family: "Roboto", sans-serif;
@@ -63,4 +62,18 @@ body {
 .bold {
   font-weight: bold;
   color: rgb(121, 120, 120);
+}
+
+.subtitle {
+  padding-top: 0.5em;
+  color: rgb(92, 92, 92);
+  text-transform: capitalize;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-size: 0.7em;
+}
+
+.numbers {
+  font-size: 3em;
+  color: rgb(221, 121, 39);
 }
