--- a/src/style.css
+++ b/src/style.css
@@ -10,20 +10,17 @@ body {
   flex-direction: row;
 }
 
-.container-icons,
 .deathIcon,
 .recIcon,
 .confIcon {
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
 }
 
 .container-icons {
-  width: 50vw;
-  height: 40vh;
-  display: flex;
-  flex-direction: column;
-  border: 1px solid red;
+  margin: 0 0;
+  width: 100%;
+  height: 80vh;
 }
 .container-deaths,
 .container-recovered,
@@ -35,7 +32,7 @@ body {
 .main-container {
   display: flex;
   height: 90vh;
-  padding: 1em;
+  padding: 0;
 }
 
 .subtitle {
@@ -57,6 +54,7 @@ body {
   width: 35vw;
   border-right: 1px solid rgb(186, 187, 186);
   height: 100vh;
+  padding: 0.3em 1em;
 }
 .display-left-text {
   margin-bottom: 1em;
