--- a/src/style.css
+++ b/src/style.css
@@ -13,14 +13,15 @@ body {
 .deathIcon,
 .recIcon,
 .confIcon {
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
 }
 
 .container-icons {
   margin: 0 0;
   width: 100%;
   height: 80vh;
+  padding: 0.5em;
 }
 .container-deaths,
 .container-recovered,
@@ -32,7 +33,6 @@ body {
 .main-container {
   display: flex;
   height: 90vh;
-  padding: 0;
 }
 
 .subtitle {
@@ -45,7 +45,7 @@ body {
   border-bottom: orange 1px solid;
   width: 100%;
   height: 9vh;
-  font-size: 1.5em;
+  font-size: 1.2em;
   color: rgb(85, 85, 85);
   margin-bottom: 1em;
 }
