--- a/src/style.css
+++ b/src/style.css
@@ -51,6 +51,8 @@ body {
 }
 
 .display-left {
+  display: flex;
+  flex-direction: column;
   width: 35vw;
   border-right: 1px solid rgb(186, 187, 186);
   height: 100vh;
@@ -84,29 +86,9 @@ body {
   color: rgb(221, 121, 39);
 }
 
-.circle-green {
-  width: 15px;
-  height: 15px;
-  border-radius: 100%;
-  border: 1.5px solid rgb(255, 136, 0);
-  background-color: rgb(255, 168, 68);
-  display: flex;
-  justify-content: right;
-}
-.flexbox-circle {
-  display: flex;
-  align-items: center;
-}
-
-.flexbox-circle h3 {
-  padding: 0.5em;
-}
-
 .credit {
-  margin-top: 19vh;
-  text-align: right;
-  padding: 0 0.7em;
   font-size: 0.7em;
-  font-family: "Roboto", sans-serif;
-  font-weight: 300;
+  color: grey;
+  margin-top: auto;
+  text-align: right;
 }
