Corrected link referral

--- a/src/style.css
+++ b/src/style.css
@@ -161,7 +161,7 @@
     padding-bottom: 1em;
   }
 
-  .who-link {
+  .johns-hopkins-link {
     color: rgb(59, 162, 202);
     text-decoration: none;
   }
