--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-size: 1em;
 }
 .fatality-rate-text {
   font-size: 0.7em;
@@ -28,7 +27,7 @@
 .container-icons {
   width: 100%;
   height: 100%;
-  padding: 0.5em;
+  padding: 0.5em 0 0 0.5em;
 }
 .container-deaths,
 .container-recovered,
