--- a/src/style.css
+++ b/src/style.css
@@ -110,6 +110,20 @@
   margin: 0 -1em;
 }
 
+.image-key-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: fixed;
+  bottom: 0.7em;
+  border: 1px solid rgb(163, 163, 163);
+  border-radius: 3px;
+  background-color: rgb(255, 255, 255, 0.8);
+  width: 240px;
+  height: 50px;
+  margin: 0 1em;
+}
+
 @media only screen and (min-width: 800px) {
   .fatality-rate-text {
     width: 30vw;
