--- a/src/style.css
+++ b/src/style.css
@@ -8,12 +8,15 @@
   color: rgb(59, 162, 202);
   text-decoration: none;
 }
+.fatality-container {
+  display: flex;
+}
 .fatality-rate-text {
-  font-size: 0.7em;
+  font-size: 0.6em;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 60vw;
+  width: 30vw;
   height: 5vh;
   border: 1px solid rgb(133, 190, 255);
   margin: 0.7em auto;
@@ -28,11 +31,7 @@
   width: 10px;
   height: 10px;
 }
-.container-icons {
-  width: 100%;
-  height: 100%;
-  padding: 0.5em 0 0 0.5em;
-}
+
 .container-deaths,
 .container-recovered,
 .container-sick {
@@ -125,12 +124,25 @@
 }
 
 @media only screen and (min-width: 800px) {
+  .fatality-container {
+    display: block;
+  }
+  .container-icons {
+    margin-left: auto;
+    width: 62%;
+    height: 100vh;
+    padding: 0.5em 0 0 0.5em;
+  }
   .fatality-rate-text {
+    font-size: 0.7em;
     width: 30vw;
   }
   .main-container {
     display: flex;
+    position: fixed;
     flex-direction: row;
+    height: 100%;
+    border-right: 2px solid rgb(118, 155, 211);
   }
   .deathIcon,
   .recIcon,
@@ -147,8 +159,7 @@
   }
   .display-left {
     width: 38vw;
-    border-right: 2px solid rgb(88, 160, 255);
-    height: 100vh;
+    height: 100%;
   }
   .display-left-text {
     margin-bottom: 1em;
@@ -176,10 +187,6 @@
   .johns-hopkins-link {
     color: rgb(59, 162, 202);
     text-decoration: none;
-  }
-
-  .flex-container {
-    display: flex;
   }
 
   .icon-text-bottom {
